Import of MAROS/Bitmask-Data-1.05 from CPAN.
gitpan-cpan-distribution: Bitmask-Data
gitpan-cpan-version:      1.05
gitpan-cpan-path:         MAROS/Bitmask-Data-1.05.tar.gz
gitpan-cpan-author:       MAROS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -45,13 +45,47 @@ METHODS
 
    bitmask_complex
     Boolean value that enables/disables checks for composed bitmasks. If
-    false init will only accept bits that are powers of 2.
+    false init will only accept bitmask bit values that are powers of 2.
 
     Default: 0
 
+    Complex bitmask also allow the creation of overlapping bitmask values:
+
+     packacke LocaleBitmask;
+     use base qw(Bitmask::Data);
+     __PACKAGE__->bitmask_length(8); # 8 bits
+     __PACKAGE__->bitmask_complex(1); # enable overlapping bitmasks
+     __PACKAGE__->init(
+        AT      => 0b000_00001, # Austria
+        CH      => 0b000_00010, # Switzerland
+        DE      => 0b000_00100, # Germany
+        FR      => 0b000_01000, # France
+        IT      => 0b000_10000, # Italy
+        
+    de      => 0b001_00000, # German
+        fr      => 0b010_00000, # French
+        it      => 0b100_00000, # Italian
+        
+    de_AT   => 0b001_00001, # German / Austria
+        de_CH   => 0b001_00010, # German / Switzerland
+        de_DE   => 0b001_00100, # German / Germany
+        fr_CH   => 0b010_00010, # French / Germany
+        fr_FR   => 0b010_01000, # French / France
+        it_CH   => 0b100_00010, # Italian / Germany    
+        it_IT   => 0b100_10000, # Italian / Italy
+     );
+     
+ # Somewhere else
+     
+ LocaleBitmask->new('de')->hasany('de'); # true
+     LocaleBitmask->new('de')->hasany('de_DE'); # true
+     LocaleBitmask->new('de')->hasall('de_DE'); # false
+     LocaleBitmask->new('de_DE','de_AT','de_CH')->hasexact('de','AT','DE','CH'); # true
+     LocaleBitmask->new('de_DE','de_AT','de_CH')->list # de,DE,de_DE,de_AT,AT,de_CH,CH
+
    bitmask_lazyinit
     Boolean value that enables/disables warnings for lazy initialization. (
-    Lazy initialization = call of init withozt bit values)
+    Lazy initialization = call of init without bitmask bit values)
 
     Default: 0
 
@@ -67,11 +101,20 @@ METHODS
     values after the value.
 
         CLASS->init(
-            'value1' # lazy initilaization
-            'value2' => 0x2 ,
-            'value3', # lazy initilaization
-            'value4' => 16,
-            'value5' => 0b100000,
+            'value1' => 0b000001,
+            'value2' => 0b000010,
+            'value3' => 0b001000,
+            'value4' => 0b010000,
+        );
+
+    With "bitmask_lazyinit" enabled you can also skip the bitmask bit values
+
+        CLASS->bitmask_lazyinit(1);
+        CLASS->init(
+            'value1',
+            'value2',
+            'value3',
+            'value4',
         );
 
    data2bit
@@ -90,10 +133,11 @@ METHODS
     Returns all the value for the given bitmask.
 
    any2data
-        CLASS->any2data(124);
-        CLASS->any2data('de_DE');
-        CLASS->any2data(0b110001001);
-        CLASS->any2data('0B110001001');
+        CLASS->any2data(124); # Bitmask
+        CLASS->any2data('de_DE'); # Value
+        CLASS->any2data(0b110001001); # Bitmask in bit notation
+        CLASS->any2data('0B110001001'); # Bitmask string
+        CLASS->any2data('0b111000001'); # Bitmask string
 
     Turns a single value (bit, bitmask,value, bitmask string) into a value.
 
@@ -118,8 +162,6 @@ METHODS
 
     *   LIST or ARRAYREF of values
 
-    *   LIST or ARRAYREF of bits (integers)
-
     *   LIST or ARRAYREF of strings representing bits or bitmasks (starting
         with '0b')
 
@@ -127,11 +169,18 @@ METHODS
 
     *   Any combination of the above
 
+   clone
+        $bm2 = $bm->clone();
+
+    Clones a bitmask object
+
    set
         $bm->set(ITEMS);
 
     This method takes the same arguments as "new". It resets the current
     bitmask and sets the supplied arguments.
+
+    Returns the object.
 
    list
         $bm->list()
@@ -156,21 +205,29 @@ METHODS
     This method takes the same arguments as "new". The values supplied in
     the arguments will be unset.
 
+    Returns the object.
+
    reset
         $bm->reset();
 
     Unsets all values, leaving an empty list.
+
+    Returns the object.
 
    setall
         $bm->setall();
 
     Sets all values.
 
+    Returns the object.
+
    add
         $bm->add(ITEMS);
 
     This method takes the same arguments as "new". The specified values will
     be set.
+
+    Returns the object.
 
    mask
         $bm->mask();
@@ -182,8 +239,8 @@ METHODS
 
     Retuns the string representing the bitmask.
 
-   sqlfilter
-        $bm->sqlfilter($field);
+   sqlfilter_all
+        $bm->sqlfilter_all($field);
 
     This method can be used for database searches in conjunction with
     SQL::Abstract an POSTGRESQL (SQL::Abstract is used by "DBIx::Class" for
@@ -197,7 +254,7 @@ METHODS
             'mytable', 
             \@fields,
             {
-                $bm->sqlfilter('mytable.bitmaskfield'),
+                $bm->sqlfilter_all('mytable.bitmaskfield'),
             }
         );
 
@@ -205,9 +262,17 @@ METHODS
 
         my $list = $resultset->search(
             { 
-                $bm->sqlfilter('me.bitmaskfield'), 
+                $bm->sqlfilter_all('me.bitmaskfield'), 
             },
         );
+
+   sqlfilter
+    Shortcut for "sqlfilter_all"
+
+   sqlfilter_any
+        $bm->sqlfilter_any($field);
+
+    Works like "sqlfilter_all" but checks for any bit matching
 
    hasall
         $bm->hasall(ITEMS);
@@ -230,6 +295,9 @@ METHODS
 CAVEATS
     Since Bitmask::Data is very liberal with input data you cannot use
     numbers as bitmask values.
+
+    Bitmask::Data also adds a considerable processing overhead (especially
+    when the bitmask_complex option is enabled) to bitmask manipulations.
 
 SUBCLASSING
     Bitmask::Data was designed to be subclassed.
@@ -257,13 +325,15 @@ WORKING WITH DATABASES
             otherfields character varying
         );
 
-    The length of the bitmask field must match "CLAS->bitmask_length".
+    The length of the bitmask field must match "CLASS->bitmask_length".
 
-    This module provides two convenient methods to work with databases:
+    This module provides three convenient methods to work with databases:
 
-    *   sqlfilter: Search which have the current values set
+    *   sqlfilter_all: Search for matching bitmasks
 
-    *   string: Print the bitmask string as used by the database
+    *   sqlfilter_any: Search for bitmasks with matching bits
+
+    *   string: Print the bitmask string as used by postgres database
 
     If you are working with DBIx::Class you might also install de- and
     inflators for Bitmask objects:
