--- a/Changes
+++ b/Changes
@@ -1,18 +1,29 @@
 Revision history for Perl module Bitmask::Data
+
+1.06 Fri Oct 3 2008
+    - More overload methods
+    - Added additional tests
+    - Neg method
+
 1.05 Fri Aug 30 2008
     - Added additional tests
     - Better support for overlapping complex bitmasks 
     - Clone and additional search/compare methods
+    
 1.04 Fri Aug 30 2008
     - Maintenance release
     - Added tests 
+    
 1.03 Mon Jun 16 2008
     - Maintenance release
+    
 1.02 Mon Jun 16 2008
     - Fixed warning in test
     - Test for warnings
+    
 1.01 Mon Jun 02 2008
     - Added changelog
     - Fixed typos and wrong markup in pod
+    
 1.00 Thu May 29 2008
     - original version
