Import of MAROS/Bitmask-Data-2.01 from CPAN.
gitpan-cpan-distribution: Bitmask-Data
gitpan-cpan-version:      2.01
gitpan-cpan-path:         MAROS/Bitmask-Data-2.01.tar.gz
gitpan-cpan-author:       MAROS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Bitmask::Data
 
+2.01 Fri Jul 24 2009
+    - Update dependencies
+
 2.00 Tue Jul 21 2009
     - ATTENTION: bitmask_complex option is not supported anymore
     - Complete rewrite using strings with "\0" and "\1" as internal data format
