--- a/README
+++ b/README
@@ -19,9 +19,11 @@ SYNOPSIS
  
      ## Somewhere else in your code
      use MyBitmask;
-     my $bm = MyBitmask->new('value1','value3');
-     $bm->add('value3');
-     $bm->string;
+     my $bm1 = MyBitmask->new('value1','value3');
+     my $bm2 = MyBitmask->new('0b000000000000010010');
+     $bm1->add('value3');
+     my $bm3 = $bm1 | $bm2; 
+     $bm3->string;
 
 DESCRIPTION
     This package helps you dealing with bitmasks. First you need to subclass
@@ -31,7 +33,7 @@ DESCRIPTION
 
     After the initialization you can create an arbitrary number of bitmask
     objects which can be accessed and manipulated with convenient methods
-    and overloaded operators.
+    and overloaded arithmetic and bit operators.
 
     Bitmask::Data does not store bitmasks as integers internally, but as
     strings conststing of \0 and \1, hence makinging unlimited length
@@ -60,10 +62,11 @@ METHODS
     Default: 0
 
      __PACKAGE__->bitmask_lazyinit(1);
+     __PACKAGE__->bitmask_length(6);
      __PACKAGE__->init(
-        'value1', # will be 0b001
-        'value2', # will be 0b010
-        'value3'  # will be 0b100
+        'value1', # will be 0b000001
+        'value2', # will be 0b000010
+        'value3'  # will be 0b000100
      );
 
     If bitmask_lazyinit is 2 then bit values will be filled from left to
@@ -78,13 +81,7 @@ METHODS
      );
 
    bitmask_items
-    HASHREF of all bitmask items.
-
-   bitmask_empty
-    Empty bitmask.
-
-   bitmask_full
-    Bitmask with all bits set.
+    HASHREF of all bitmask items, with values as keys and bitmask as values.
 
    init
         CLASS->init(LIST of VALUES);
@@ -164,13 +161,23 @@ METHODS
     *   Numeric context
 
         Returns bitmask integer value (see integer method). For large
-        bitmasks (> 40) this will be a Math::BigInt object
+        bitmasks (> 40 bits) this will allways be a Math::BigInt object
+        (hence using this method is not recommended).
 
     *   Scalar context
 
         Returns bitmask string representation (see string method)
 
-    *   Comparison
+    *   ==, eq, <=>, cmp
+
+        Works like 'has_any'
+
+    *   Smartmatch
+
+        Works like has_any.
+
+         $bm = new Somebitmask->new('v1','v2');
+         $bm ~~ ['v1','v3'] # true, because 'v1' matches even if 'v3' is not set
 
     *   +, -
 
@@ -204,8 +211,9 @@ METHODS
         my $bm = MyBitmask->new([32, 'value1', 0b00010000010000]);
 
     Create a new bitmask object. You can supply almost any combination of
-    bits, Bitmask::Data objects, bitmasks and values, even mix different
-    types. See any2bitmask for details on possible formats.
+    ARRAYREFS, bits, Bitmask::Data objects, Math::BigInt objects, bitmasks
+    and values, even mix different types. See any2bitmask for details on
+    possible formats.
 
    new_from_bitmask
         my $bm = MyBitmask->new_from_bitmask($bitmask_string);
@@ -246,12 +254,12 @@ METHODS
    reset
         $bm->reset()
 
-    Resets the bitmask to the default or empty bitmask.
+    Resets the bitmask to the default (or empty) bitmask.
 
     Returns the object.
 
-   setall
-        $bm->reset()
+   set_all
+        $bm->set_all()
 
     Sets all defined bits in the bitmask.
 
@@ -301,7 +309,7 @@ METHODS
 
    sqlfilter_all
     This method can be used for database searches in conjunction with
-    SQL::Abstract an POSTGRESQL (SQL::Abstract is used by "DBIx::Class" for
+    SQL::Abstract an POSTGRESQL (SQL::Abstract is used by DBIx::Class for
     generating searches). The search will find all database rows with
     bitmask that have at least the given values set. (use the "sql" method
     for an exact match)
@@ -326,6 +334,11 @@ METHODS
 
    sqlfilter_any
     Works like "sqlfilter_all" but checks for any bit matching
+
+   sqlstring
+    Returns the bitmask as a quoted string as needed by PostgreSQL:
+
+     B'0000000000000001'::bit(16)
 
    has_all
         if ($bm->has_all(PARAMS)) {
@@ -355,11 +368,11 @@ METHODS
 
 CAVEATS
     Since Bitmask::Data is very liberal with input data you cannot use
-    numbers as bitmask values. (It would think that you are supplying a
-    bitmask and not a value)
+    numbers as bitmask values. (It would think that you are supplying an
+    integer bitmask and not a value)
 
     Bitmask::Data adds a considerable processing overhead to bitmask
-    manipulations. If you don't either don't need the extra comfort or use
+    manipulations. If you either don't need the extra comfort or use
     bitmasks with less that 40 bits that you should consider using just the
     perl built in bit operators on simple integer values.
 
@@ -399,8 +412,8 @@ WORKING WITH DATABASES
 
     *   string: Print the bitmask string as used by the database
 
-    If you are working with DBIx::Class you might also install de- and
-    inflators for Bitmask objects:
+    If you are working with l<DBIx::Class> you might also install de- and
+    inflators for Bitmask::Data objects:
 
         __PACKAGE__->inflate_column('fieldname',{
             inflate => sub {
